<resources>
    <string name="app_name">Navigation_Drawer_Practice</string>
    <string name="activity">Activity</string>
    <string name="email">bhavanisr021@gmail.com</string>
    <string name="bhavani_rathod">Bhavani Rathod</string>
    <string name="settings">Settings</string>
    <string name="your_activity">Your activity</string>
    <string name="saved">Saved</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="exit">Exit</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="button2">Button</string>
    <string name="profile2">Profile</string>
    <string name="loginBtn">Login</string>
</resources>